--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -1,136 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="static/styles.css">
     <title>AppLinkr - Code Statistics</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 20px;
-            background-color: #f0f0f0;
-            color: #333;
-        }
 
-        h1 {
-            text-align: center;
-            color: #007bff;
-        }
-
-        
-        .menu-icon {
-            display: none; 
-            font-size: 24px;
-            cursor: pointer;
-        }
-        nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background-color: #007bff;
-            padding: 10px;
-            position: relative;
-      
-        }
-        nav a {
-            color: white;
-            text-decoration: none;
-            padding: 10px;
-        }
-        
-        nav a:hover {
-            background-color: #0056b3;
-            border-radius: 4px;
-        }
-        .menu {
-            display: flex;
-            gap: 20px;
-            
-        }
-        .menu-icon {
-            display: none; 
-            font-size: 24px;
-            cursor: pointer;
-        }
-        @media (max-width: 768px) {
-            .menu {
-                display: none; 
-                flex-direction: column;
-                gap: 10px;
-                position:relative;
-                background-color: #007bff; 
-                width: 100%; 
-                z-index: 1000; 
-                padding: 10px 0; 
-            }
-            .menu.active {
-                display: flex; 
-            }
-            .menu-icon {
-                display: block; 
-            }
-        }
-
-        .card {
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            margin: 10px 0;
-            padding: 20px;
-            transition: transform 0.2s;
-        }
-
-        .card:hover {
-            transform: scale(1.02);
-        }
-
-        .card-title {
-            font-weight: bold;
-            margin-bottom: 10px;
-        }
-
-        .card-content {
-            margin-bottom: 15px;
-        }
-
-        .card img {
-            max-width: 100px;
-            height: auto;
-            border-radius: 4px;
-        }
-
-        .url {
-            word-wrap: break-word;
-            margin: 10px 0;
-        }
-
-        .delete-button {
-            background-color: #dc3545; 
-            color: white;
-            border: none;
-            cursor: pointer;
-            padding: 10px 15px;
-            border-radius: 4px;
-            transition: background-color 0.3s;
-        }
-
-        .delete-button:hover {
-            background-color: #c82333;
-        }
-
-    </style>
 </head>
 <body>
     <!-- Navigation bar -->
+    <div class="wrapper"> 
     <nav>
         <div class="menu-icon" onclick="toggleMenu()">☰</div>
+        <h1>AppLinkr</h1>
         <div class="menu">
             <a href="{{ url_for('index') }}">QR Generator</a>
             <a href="{{ url_for('admin') }}">Admin</a>
-            <a href="#" onclick="toggleTheme()">Toggle Dark Mode</a> 
         </div>      
     </nav>
+
+    {% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <ul class="flashes">
+      {% for message in messages %}
+        <li>{{ message }}</li>
+      {% endfor %}
+    </ul>
+  {% endif %}
+{% endwith %}
 
     <h1>QR Code Statistics</h1>
 
@@ -147,19 +45,20 @@
             <div class="card">
                 <div class="card-title">{{ code[1] }}</div> <!-- Title -->
                 <div class="card-content">
-                    <strong>ID:</strong> {{ code[0] }}<br>
-                    <strong>Scans:</strong> {{ records|length }}<br>
+                    <strong>ID:</strong> {{ code[0] }}<br>                    
                     <strong>QR Code:</strong><br>
                     <a href="{{ qr_code_url }}" target="_blank">
                         <img src="{{ qr_code_url }}" alt="QR Code">
                     </a>
                     <div class="url">
-                        <strong>App Store URL:</strong> <a href="{{ code[2] }}" target="_blank">{{ code[2] }}</a><br>
-                        <strong>Play Store URL:</strong> <a href="{{ code[3] }}" target="_blank">{{ code[3] }}</a>
+                        <strong>Direct Redirect:</strong> <a href="{{ code[2] }}" target="_blank">{{ code[2] }}</a><br>
+                        <strong>App Store URL:</strong> <a href="{{ code[3] }}" target="_blank">{{ code[3] }}</a><br>
+                        <strong>Play Store URL:</strong> <a href="{{ code[4] }}" target="_blank">{{ code[4] }}</a>
                     </div>
                     <div>
                         <strong>Tracking Info:</strong>
                         <ul>
+                            <strong>Scans:</strong> {{ records|length }}<br>
                             {% for record in records %}
                                 <li>{{ record[2] }} | Region: {{ record[5] }} | Browser: {{ record[6] }} | OS: {{ record[7] }} | Language: {{ record[8] }} | Referrer: {{ record[9] }}</li>
                             {% endfor %}
@@ -175,8 +74,7 @@
             <input type="submit" value="Download Database Backup" class="delete-button">
         </form>
     {% endif %}
-
-
+</div>
     <script>
         function toggleMenu() {
             const menu = document.querySelector('.menu');
@@ -189,5 +87,8 @@
             }
         }
     </script>
+
+
+
 </body>
 </html>
