--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -34,7 +34,7 @@
 
     {% if not session.get('authenticated') %}
         <h2>Login</h2>
-        <form method="post" action="{{ url_for('admin') }}">
+        <form method="post" action="{{ url_for('index') }}">
             <input type="password" name="password" placeholder="Enter Password" required>
             <input type="submit" value="Login">
         </form>
