--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -17,21 +17,21 @@
         <div class="menu">
             <a href="{{ url_for('index') }}">QR Generator</a>
             <a href="{{ url_for('admin') }}">Admin</a>
-            {% if session.get('authenticated') %}
-            <a href="{{ url_for('logout') }}" style="text-decoration: none; color: #007bff;">Logout</a>
-
+        {% if session.get('authenticated') %}
+            <a href="{{ url_for('logout') }}">Logout</a>
+        {% endif %}
         </div>      
     </nav>
 
     {% with messages = get_flashed_messages() %}
-  {% if messages %}
-    <ul class="flashes">
-      {% for message in messages %}
-        <li>{{ message }}</li>
-      {% endfor %}
-    </ul>
-  {% endif %}
-{% endwith %}
+    {% if messages %}
+        <ul class="flashes">
+        {% for message in messages %}
+            <li>{{ message }}</li>
+        {% endfor %}
+        </ul>
+    {% endif %}
+    {% endwith %}
 
     <h1>QR Code Statistics</h1>
 
@@ -77,7 +77,7 @@
             <input type="submit" value="Download Database Backup" class="delete-button">
         </form>
     {% endif %}
-</div>
+    </div>
     <script>
         function toggleMenu() {
             const menu = document.querySelector('.menu');
