Moved Logout Button to NavBar (#6)
* Added login to generate page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,6 +16,9 @@
         <div class="menu">
             <a href="{{ url_for('index') }}">QR Generator</a>
             <a href="{{ url_for('admin') }}">Admin</a>
+            {% if session.get('authenticated') %}
+            <a href="{{ url_for('logout') }}">Logout</a>
+            {% endif %}
         </div>      
     </nav>
 
